Add tables HTML

--- a/src/app/tabla-cursos/tabla-cursos.component.html
+++ b/src/app/tabla-cursos/tabla-cursos.component.html
@@ -1,1 +1,17 @@
-<p>tabla-cursos works!</p>
+<h1>Cursos:</h1>
+<table class="table table-dark">
+    <thead>
+        <tr>
+            <th scope="col">Materia</th>
+            <th scope="col">Dificultad</th>
+            <th scope="col">Requiere</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>materia</td>
+            <td>dificultad</td>
+            <td>requiere</td>
+        </tr>
+    </tbody>
+</table>
