--- a/src/app/tabla-alumnos/tabla-alumnos.component.html
+++ b/src/app/tabla-alumnos/tabla-alumnos.component.html
@@ -1,1 +1,17 @@
-<p>tabla-alumnos works!</p>
+<h1>Alumnos:</h1>
+<table class="table table-dark">
+    <thead>
+        <tr>
+            <th scope="col">Nombre</th>
+            <th scope="col">Apellido</th>
+            <th scope="col">Promedio</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>nombre</td>
+            <td>apellido</td>
+            <td>promedio</td>
+        </tr>
+    </tbody>
+</table>
