--- a/src/app/components/tabla-alumnos/tabla-alumnos.component.html
+++ b/src/app/components/tabla-alumnos/tabla-alumnos.component.html
@@ -8,10 +8,10 @@
         </tr>
     </thead>
     <tbody>
-        <tr>
-            <td>nombre</td>
-            <td>apellido</td>
-            <td>promedio</td>
+        <tr *ngFor="let alumno of alumnos">
+            <td>{{ alumno.nombre }}</td>
+            <td>{{ alumno.apellido }}</td>
+            <td>{{ alumno.promedio }}</td>
         </tr>
     </tbody>
 </table>
